Show referral link and track referrals

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,11 @@
 		},
 		{
 			"type": "shell",
+			"command": "firebase deploy --only functions",
+			"label": "🔥👍 functions",
+		},
+		{
+			"type": "shell",
 			"command": "firebase deploy --only hosting",
 			"label": "🔥👍 hosting",
 		},
