--- a/firebase.json
+++ b/firebase.json
@@ -15,6 +15,7 @@
 		]
 	},
 	"firestore": {
-		"rules": "firestore.rules"
+		"rules": "firestore.rules",
+		"indexes": "firestore.indexes.json"
 	}
 }
